<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/explicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explicit"
        />
    <Button
        android:id="@+id/implicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit"
        />
    <Button
        android:id="@+id/implicitCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicitCategory"
        />
    <Button
        android:id="@+id/goBrower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBrower"/>
    <Button
        android:id="@+id/otherss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/others"/>
    <Button
        android:id="@+id/tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel"/>

</LinearLayout>